[gd_scene load_steps=18 format=2]

[ext_resource path="res://Ressources/Fonts/Tourney-Light.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/univers.gd" type="Script" id=2]
[ext_resource path="res://Shaders/star_shader.shader" type="Shader" id=3]
[ext_resource path="res://Shaders/starParticles.shader" type="Shader" id=4]
[ext_resource path="res://Scripts/plot.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 3 )
shader_param/rate = 1.0
shader_param/baseColor = Vector3( 0.75, 0.1, 0.1 )
shader_param/radius = 2.5

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 4 )

[sub_resource type="ParticlesMaterial" id=4]
next_pass = SubResource( 3 )
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 64.0
initial_velocity_random = 0.4
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 2.0

[sub_resource type="Shader" id=5]
code = "shader_type canvas_item;

uniform float gotten = 0.0;

void fragment(){
	float val  = gotten/2.0;
	COLOR.rgb = vec3(val, val, val);
}"

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 5 )
shader_param/gotten = 0.0

[sub_resource type="Shader" id=7]
code = "shader_type canvas_item;

uniform float gotten = 0.0;

void fragment(){
	float val  = gotten/2.0;
	COLOR.rgb = vec3(val, val, val);
}"

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 7 )
shader_param/gotten = 0.0

[sub_resource type="ShaderMaterial" id=9]
shader = SubResource( 7 )
shader_param/gotten = 0.0

[sub_resource type="ShaderMaterial" id=10]
shader = SubResource( 7 )
shader_param/gotten = 0.0

[sub_resource type="ShaderMaterial" id=11]
shader = SubResource( 5 )
shader_param/gotten = 0.0

[sub_resource type="DynamicFont" id=12]
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
debugGraph = NodePath("Panel")
debugGraph2 = NodePath("Panel2")

[node name="Container" type="VBoxContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1142.0
grow_vertical = 2
rect_min_size = Vector2( 0, 1080 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="topbar" type="VBoxContainer" parent="Container"]
margin_right = 3812.0
margin_bottom = 146.0
grow_horizontal = 2
alignment = 1

[node name="EnergyContainer" type="HBoxContainer" parent="Container/topbar"]
margin_right = 3812.0
margin_bottom = 71.0

[node name="Energy" type="Label" parent="Container/topbar/EnergyContainer"]
margin_right = 137.0
margin_bottom = 71.0
hint_tooltip = "Total Amount of energy "
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
text = "0 eV"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="deltaEnergy" type="Label" parent="Container/topbar/EnergyContainer"]
margin_left = 141.0
margin_right = 436.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 1 )
text = "  +0.0eV/s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnergyContainer2" type="HBoxContainer" parent="Container/topbar"]
margin_top = 75.0
margin_right = 3812.0
margin_bottom = 146.0

[node name="Pression" type="Label" parent="Container/topbar/EnergyContainer2"]
margin_right = 358.0
margin_bottom = 71.0
hint_tooltip = "Total Amount of energy "
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
text = "0 Pression"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="deltaPression" type="Label" parent="Container/topbar/EnergyContainer2"]
margin_left = 362.0
margin_right = 896.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 1 )
text = "  +0.0 Pression/s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="Container"]
margin_top = 150.0
margin_right = 1916.0
margin_bottom = 1086.0
rect_min_size = Vector2( 1900, 900 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Star" type="HBoxContainer" parent="Container/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="starDisplay" type="VBoxContainer" parent="Container/TabContainer/Star"]
margin_right = 256.0
margin_bottom = 940.0
alignment = 1

[node name="ColorRect" type="ColorRect" parent="Container/TabContainer/Star/starDisplay"]
material = SubResource( 2 )
margin_top = 342.0
margin_right = 256.0
margin_bottom = 598.0
rect_min_size = Vector2( 256, 256 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Particles2D" type="Particles2D" parent="Container/TabContainer/Star/starDisplay/ColorRect"]
position = Vector2( 128, 128 )
process_material = SubResource( 4 )

[node name="StarInfos" type="VBoxContainer" parent="Container/TabContainer/Star"]
margin_left = 260.0
margin_right = 1084.0
margin_bottom = 940.0
size_flags_horizontal = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Temperature" type="Label" parent="Container/TabContainer/Star/StarInfos"]
margin_top = 397.0
margin_right = 824.0
margin_bottom = 468.0
custom_fonts/font = SubResource( 1 )
text = "14e6 K"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mass" type="Label" parent="Container/TabContainer/Star/StarInfos"]
margin_top = 472.0
margin_right = 824.0
margin_bottom = 543.0
custom_fonts/font = SubResource( 1 )
text = "0.8 M"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradeList" type="VBoxContainer" parent="Container/TabContainer/Star"]
margin_left = 1088.0
margin_right = 1912.0
margin_bottom = 940.0
grow_horizontal = 2
rect_min_size = Vector2( 512, 940 )
size_flags_horizontal = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TempUpgrade" type="Button" parent="Container/TabContainer/Star/UpgradeList"]
margin_top = 436.0
margin_right = 824.0
margin_bottom = 456.0
text = "Increase  AAA"

[node name="TempUpgrade2" type="Button" parent="Container/TabContainer/Star/UpgradeList"]
margin_top = 460.0
margin_right = 824.0
margin_bottom = 480.0
text = "Increase XXX"

[node name="TempUpgrade3" type="Button" parent="Container/TabContainer/Star/UpgradeList"]
margin_top = 484.0
margin_right = 824.0
margin_bottom = 504.0
text = "Increase YYY"

[node name="Cycles" type="HBoxContainer" parent="Container/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Elements" type="VBoxContainer" parent="Container/TabContainer/Cycles"]
margin_right = 600.0
margin_bottom = 940.0
rect_min_size = Vector2( 600, 900 )
alignment = 1

[node name="H" type="Label" parent="Container/TabContainer/Cycles/Elements"]
margin_top = 434.0
margin_right = 600.0
margin_bottom = 505.0
custom_fonts/font = SubResource( 1 )
text = "0 H"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="He" type="Label" parent="Container/TabContainer/Cycles/Elements"]
visible = false
margin_top = 472.0
margin_right = 600.0
margin_bottom = 543.0
custom_fonts/font = SubResource( 1 )
text = "0 He"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Li" type="Label" parent="Container/TabContainer/Cycles/Elements"]
visible = false
margin_top = 509.0
margin_right = 600.0
margin_bottom = 580.0
custom_fonts/font = SubResource( 1 )
text = "0 Li"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Be" type="Label" parent="Container/TabContainer/Cycles/Elements"]
visible = false
margin_top = 547.0
margin_right = 600.0
margin_bottom = 618.0
custom_fonts/font = SubResource( 1 )
text = "0 Be"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B" type="Label" parent="Container/TabContainer/Cycles/Elements"]
visible = false
margin_top = 547.0
margin_right = 600.0
margin_bottom = 618.0
custom_fonts/font = SubResource( 1 )
text = "0 B"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FusionsTab" type="TabContainer" parent="Container/TabContainer/Cycles"]
margin_left = 604.0
margin_right = 1904.0
margin_bottom = 940.0
rect_min_size = Vector2( 1300, 0 )
tab_align = 0

[node name="Hydrogen" type="HBoxContainer" parent="Container/TabContainer/Cycles/FusionsTab"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 12.0
margin_bottom = -24.0
rect_min_size = Vector2( 900, 900 )

[node name="PP-Cycle" type="Panel" parent="Container/TabContainer/Cycles/FusionsTab/Hydrogen"]
margin_right = 600.0
margin_bottom = 904.0
rect_min_size = Vector2( 600, 900 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Container/TabContainer/Cycles/FusionsTab/Hydrogen/PP-Cycle"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 600, 940 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PP1unlock" type="Button" parent="Container/TabContainer/Cycles/FusionsTab/Hydrogen/PP-Cycle/VBoxContainer"]
margin_right = 600.0
margin_bottom = 20.0
text = "Unlock PP1 Cycle"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PP2unlock" type="Button" parent="Container/TabContainer/Cycles/FusionsTab/Hydrogen/PP-Cycle/VBoxContainer"]
margin_top = 24.0
margin_right = 600.0
margin_bottom = 44.0
text = "Unlock PP2 Cycle (Require at least 1.4e7K)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PP3unlock" type="Button" parent="Container/TabContainer/Cycles/FusionsTab/Hydrogen/PP-Cycle/VBoxContainer"]
margin_top = 48.0
margin_right = 600.0
margin_bottom = 68.0
text = "Unlock PP3 Cycle (Require at least 2.3e7K)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Upgrades" type="Panel" parent="Container/TabContainer/Cycles/FusionsTab/Hydrogen"]
margin_left = 604.0
margin_right = 1204.0
margin_bottom = 904.0
rect_min_size = Vector2( 600, 900 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Container/TabContainer/Cycles/FusionsTab/Hydrogen/Upgrades"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats" type="VBoxContainer" parent="Container/TabContainer/Cycles/FusionsTab/Hydrogen/Upgrades/HBoxContainer"]
margin_right = 300.0
margin_bottom = 940.0
rect_min_size = Vector2( 300, 940 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rate" type="Label" parent="Container/TabContainer/Cycles/FusionsTab/Hydrogen/Upgrades/HBoxContainer/Stats"]
margin_right = 300.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
text = "Conversion rate : 1.0"

[node name="outputRate" type="Label" parent="Container/TabContainer/Cycles/FusionsTab/Hydrogen/Upgrades/HBoxContainer/Stats"]
margin_top = 24.0
margin_right = 300.0
margin_bottom = 38.0
text = "Output conversion rate : 1.0"

[node name="chance" type="Label" parent="Container/TabContainer/Cycles/FusionsTab/Hydrogen/Upgrades/HBoxContainer/Stats"]
margin_top = 42.0
margin_right = 300.0
margin_bottom = 56.0
text = "Chance for PP1 to happen : 0.1"

[node name="Upgrades" type="VBoxContainer" parent="Container/TabContainer/Cycles/FusionsTab/Hydrogen/Upgrades/HBoxContainer"]
margin_left = 304.0
margin_right = 604.0
margin_bottom = 940.0
rect_min_size = Vector2( 300, 940 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PP1_rate_button" type="Button" parent="Container/TabContainer/Cycles/FusionsTab/Hydrogen/Upgrades/HBoxContainer/Upgrades"]
margin_right = 300.0
margin_bottom = 20.0
rect_min_size = Vector2( 250, 20 )
text = "Increase PP1 conversion rate"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PP1_outputRate_button" type="Button" parent="Container/TabContainer/Cycles/FusionsTab/Hydrogen/Upgrades/HBoxContainer/Upgrades"]
margin_top = 24.0
margin_right = 300.0
margin_bottom = 44.0
text = "Increase PP1 output conversion rate"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PP1_chance_button" type="Button" parent="Container/TabContainer/Cycles/FusionsTab/Hydrogen/Upgrades/HBoxContainer/Upgrades"]
margin_top = 48.0
margin_right = 300.0
margin_bottom = 68.0
rect_min_size = Vector2( 250, 0 )
text = "Increase PP1 chance"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Super Nova" type="GridContainer" parent="Container/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Achievements" type="GridContainer" parent="Container/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
columns = 5

[node name="Achievement1" type="Panel" parent="Container/TabContainer/Achievements"]
material = SubResource( 6 )
margin_right = 370.0
margin_bottom = 128.0
rect_min_size = Vector2( 370, 128 )

[node name="Label" type="Label" parent="Container/TabContainer/Achievements/Achievement1"]
margin_right = 380.0
margin_bottom = 128.0
rect_min_size = Vector2( 380, 128 )
rect_rotation = 0.219513
hint_tooltip = "Requirement for Achievement 1"
mouse_filter = 1
text = "Achievement 1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Achievement2" type="Panel" parent="Container/TabContainer/Achievements"]
material = SubResource( 8 )
margin_left = 374.0
margin_right = 744.0
margin_bottom = 128.0
rect_min_size = Vector2( 370, 128 )

[node name="Label" type="Label" parent="Container/TabContainer/Achievements/Achievement2"]
margin_right = 380.0
margin_bottom = 128.0
rect_min_size = Vector2( 380, 128 )
rect_rotation = 0.219513
hint_tooltip = "Requirement for Achievement 1"
mouse_filter = 1
text = "Achievement 2"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Achievement3" type="Panel" parent="Container/TabContainer/Achievements"]
material = SubResource( 9 )
margin_left = 748.0
margin_right = 1118.0
margin_bottom = 128.0
rect_min_size = Vector2( 370, 128 )

[node name="Label" type="Label" parent="Container/TabContainer/Achievements/Achievement3"]
margin_right = 380.0
margin_bottom = 128.0
rect_min_size = Vector2( 380, 128 )
rect_rotation = 0.219513
hint_tooltip = "Requirement for Achievement 1"
mouse_filter = 1
text = "Achievement 3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Achievement4" type="Panel" parent="Container/TabContainer/Achievements"]
material = SubResource( 10 )
margin_left = 1122.0
margin_right = 1492.0
margin_bottom = 128.0
rect_min_size = Vector2( 370, 128 )

[node name="Label" type="Label" parent="Container/TabContainer/Achievements/Achievement4"]
margin_right = 380.0
margin_bottom = 128.0
rect_min_size = Vector2( 380, 128 )
rect_rotation = 0.219513
hint_tooltip = "Requirement for Achievement 1"
mouse_filter = 1
text = "Achievement 4"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Achievement5" type="Panel" parent="Container/TabContainer/Achievements"]
material = SubResource( 11 )
margin_left = 1496.0
margin_right = 1866.0
margin_bottom = 128.0
rect_min_size = Vector2( 370, 128 )

[node name="Label" type="Label" parent="Container/TabContainer/Achievements/Achievement5"]
margin_right = 380.0
margin_bottom = 128.0
rect_min_size = Vector2( 380, 128 )
rect_rotation = 0.219513
hint_tooltip = "Requirement for Achievement 1"
mouse_filter = 1
text = "Achievement 5"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="HBoxContainer" parent="Container/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -1904.0
margin_bottom = -4.0

[node name="VBoxContainer2" type="VBoxContainer" parent="Container/TabContainer/Options"]
margin_right = 950.0
margin_bottom = 900.0
rect_min_size = Vector2( 950, 900 )

[node name="UnitType" type="OptionButton" parent="Container/TabContainer/Options/VBoxContainer2"]
margin_right = 950.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
text = "Unit"

[node name="VBoxContainer3" type="VBoxContainer" parent="Container/TabContainer/Options"]
margin_left = 954.0
margin_right = 1429.0
margin_bottom = 900.0
rect_min_size = Vector2( 475, 900 )

[node name="Button" type="Button" parent="Container/TabContainer/Options/VBoxContainer3"]
margin_right = 475.0
margin_bottom = 20.0
text = "WIP"

[node name="VBoxContainer4" type="VBoxContainer" parent="Container/TabContainer/Options"]
margin_left = 1433.0
margin_right = 1908.0
margin_bottom = 900.0
rect_min_size = Vector2( 475, 900 )

[node name="SaveConfig" type="Button" parent="Container/TabContainer/Options/VBoxContainer4"]
margin_right = 475.0
margin_bottom = 20.0
text = "Save config"

[node name="Reset" type="Button" parent="Container/TabContainer/Options/VBoxContainer4"]
margin_top = 24.0
margin_right = 475.0
margin_bottom = 44.0
text = "Reset"

[node name="SaveStar" type="Button" parent="Container/TabContainer/Options/VBoxContainer4"]
margin_top = 48.0
margin_right = 475.0
margin_bottom = 68.0
text = "Save Star Infos"

[node name="LineEdit" type="LineEdit" parent="Container/TabContainer/Options/VBoxContainer4"]
margin_top = 72.0
margin_right = 475.0
margin_bottom = 96.0

[node name="gameTick" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="Panel" type="Panel" parent="."]
visible = false
margin_left = 10.0
margin_right = 1910.0
margin_bottom = 480.0
rect_min_size = Vector2( 256, 50 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
font = SubResource( 12 )
x_axis = 64.0
lerp_axis = 0.5

[node name="Panel2" type="Panel" parent="."]
visible = false
margin_left = 10.0
margin_top = 480.0
margin_right = 1910.0
margin_bottom = 960.0
rect_min_size = Vector2( 256, 50 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
font = SubResource( 12 )
x_axis = 64.0
lerp_axis = 0.5

[connection signal="resized" from="." to="." method="_on_Control_resized"]
[connection signal="pressed" from="Container/TabContainer/Cycles/FusionsTab/Hydrogen/PP-Cycle/VBoxContainer/PP1unlock" to="." method="_on_PP1unlock_pressed"]
[connection signal="pressed" from="Container/TabContainer/Cycles/FusionsTab/Hydrogen/PP-Cycle/VBoxContainer/PP2unlock" to="." method="_on_PP2unlock_pressed"]
[connection signal="pressed" from="Container/TabContainer/Cycles/FusionsTab/Hydrogen/PP-Cycle/VBoxContainer/PP3unlock" to="." method="_on_PP3unlock_pressed"]
[connection signal="pressed" from="Container/TabContainer/Cycles/FusionsTab/Hydrogen/Upgrades/HBoxContainer/Upgrades/PP1_rate_button" to="." method="_on_PP1_rateUpgrade_pressed"]
[connection signal="pressed" from="Container/TabContainer/Cycles/FusionsTab/Hydrogen/Upgrades/HBoxContainer/Upgrades/PP1_outputRate_button" to="." method="_on_PP1_outputRate_button_pressed"]
[connection signal="pressed" from="Container/TabContainer/Cycles/FusionsTab/Hydrogen/Upgrades/HBoxContainer/Upgrades/PP1_chance_button" to="." method="_on_PP1_chance_button_pressed"]
[connection signal="item_selected" from="Container/TabContainer/Options/VBoxContainer2/UnitType" to="." method="_on_UnitType_item_selected"]
[connection signal="pressed" from="Container/TabContainer/Options/VBoxContainer4/SaveConfig" to="." method="_on_SaveConfig_pressed"]
[connection signal="pressed" from="Container/TabContainer/Options/VBoxContainer4/SaveStar" to="." method="_on_SaveStar_pressed"]
[connection signal="timeout" from="gameTick" to="." method="_on_gameTick_timeout"]
